# SchGen

./: CMakeLists.txt  datastructures.h
Client/: CMakeLists.txt  appcore.cpp  appcore.h  calendarctrl.cpp  calendarctrl.h  daymodel.cpp  daymodel.h  grouplistmodel.cpp  grouplistmodel.h  images.qrc  main.cpp  monthmodel.cpp  monthmodel.h  qml.qrc  weekmodel.cpp  weekmodel.h
Client/qml/: AccItem.qml  day.qml  main.qml  menuItem.qml  month.qml  week.qml
Server/: CMakeLists.txt
